Flex instead of grid, position absolute, margin, padding

--- a/index.html
+++ b/index.html
@@ -17,138 +17,138 @@
 <body>
     <header>
         <h1>Best Beers</h1>
-        <button class="hamb"><i class="material-icons">menu</i></button>
+        <button class="hamb"><i class="material-icons menu">menu</i></button>
     </header>
 
     <main>
         <section>
-            <div class="number">1</div>
             <div class="cards">
+                <div class="number">1</div>
                 <h1 class="title">Mango Bay</h1>
                 <p class="sub">Mad Scientist Beer</p>
                 <p class="text">Pale Ale - American</p>
+                <button>
+                    details
+                    <i class="material-icons arrow">arrow_forward</i>
+                </button>
             </div>
-            <button>
-                <p>details</p>
-                <i class="material-icons">arrow_forward</i>
-            </button>
         </section>
 
         <section>
-            <div class="number">2</div>
             <div class="cards">
+                <div class="number">2</div>
                 <h1 class="title">Távoli Galaxis</h1>
                 <p class="sub">Rothbeer Brewery</p>
                 <p class="text">IPA - American</p>
+                <button>
+                    details
+                    <i class="material-icons arrow">arrow_forward</i>
+                </button>
             </div>
-            <button>
-                <p>details</p>
-                <i class="material-icons">arrow_forward</i>
-            </button>
         </section>
         
         <section>
-            <div class="number">3</div>
             <div class="cards">
+                <div class="number">3</div>
                 <h1 class="title">Flying Rabbit AIPA</h1>
                 <p class="sub">Monyo Brewing Co.</p>
                 <p class="text">IPA - American</p>
+                <button>
+                    details
+                    <i class="material-icons arrow">arrow_forward</i>
+                </button>
             </div>
-            <button>
-                <p>details</p>
-                <i class="material-icons">arrow_forward</i>
-            </button>
         </section>
 
         <section>
-            <div class="number">4</div>
             <div class="cards">
+                <div class="number">4</div>
                 <h1 class="title">Liquid Cocaine</h1>
                 <p class="sub">Mad Scientist Beer</p>
                 <p class="text">IPA - Imperial</p>
+                <button>
+                    details
+                    <i class="material-icons arrow">arrow_forward</i>
+                </button>
             </div>
-            <button>
-                <p>details</p>
-                <i class="material-icons">arrow_forward</i>
-            </button>
         </section>
 
         <section>
-            <div class="number">5</div>
             <div class="cards">
+                <div class="number">5</div>
                 <h1 class="title">Organic Chocolate Stout</h1>
                 <p class="sub">Samuel Smith Old Brewery</p>
                 <p class="text">Stout - English</p>
+                <button>
+                    details
+                    <i class="material-icons arrow">arrow_forward</i>
+                </button>
             </div>
-            <button>
-                <p>details</p>
-                <i class="material-icons">arrow_forward</i>
-            </button>
         </section>
 
         <section>
-            <div class="number">6</div>
             <div class="cards">
+                <div class="number">6</div>
                 <h1 class="title">Bracia</h1>
                 <p class="sub">Thornbridge Brewery</p>
                 <p class="text">Strong Ale - English</p>
+                <button>
+                    details
+                    <i class="material-icons arrow">arrow_forward</i>
+                </button>
             </div>
-            <button>
-                <p>details</p>
-                <i class="material-icons">arrow_forward</i>
-            </button>
         </section>
 
         <section>
-            <div class="number">7</div>
             <div class="cards">
+                <div class="number">7</div>
                 <h1 class="title">Oatmeal Stout</h1>
                 <p class="sub">Samuel Smith Old Brewery</p>
                 <p class="text">Stout - Oatmeal</p>
+                <button>
+                    details
+                    <i class="material-icons arrow">arrow_forward</i>
+                </button>
             </div>
-            <button>
-                <p>details</p>
-                <i class="material-icons">arrow_forward</i>
-            </button>
         </section>
 
         <section>
-            <div class="number">8</div>
             <div class="cards">
+                <div class="number">8</div>
                 <h1 class="title">Black Tokyo Horizon</h1>
                 <p class="sub">Brewdog</p>
                 <p class="text">Stout - American Imperial</p>
+                <button>
+                    details
+                    <i class="material-icons arrow">arrow_forward</i>
+                </button>
             </div>
-            <button>
-                <p>details</p>
-                <i class="material-icons">arrow_forward</i>
-            </button>
         </section>
 
         <section>
-            <div class="number">9</div>
             <div class="cards">
+                <div class="number">9</div>
                 <h1 class="title">Vintage Ale</h1>
-                <p class="sub">Fuller's</p>
+                <p class="sub">Fuller's
                 <p class="text">Old Ale</p>
+                <button>
+                    details
+                    <i class="material-icons arrow">arrow_forward</i>
+                </button>
             </div>
-            <button>
-                <p>details</p>
-                <i class="material-icons">arrow_forward</i>
-            </button>
         </section>
 
         <section>
-            <div class="number">10</div>
             <div class="cards">
+                <div class="number">10</div>
                 <h1 class="title">All the Leaves are Brown</h1>
                 <p class="sub">Tempest Brewing Company</p>
                 <p class="text">Brown Ale - American</p>
+                <button>
+                    details
+                    <i class="material-icons arrow">arrow_forward</i>
+                </button>
             </div>
-            <button>
-                <p>details</p>
-                <i class="material-icons">arrow_forward</i>
-            </button>
         </section>
         
     </main>
